2010-05-10  ebin <yutaka@ebine.org>

	* sabel/map/Candidate.php: uriメソッドのバグ修正。

2010-05-08  ebin <yutaka@ebine.org>

	* sabel/test/*: test関連のクラスのリファクタリング。モデル（DB）を使用しない
	Fixtureに対応。テスト実行時にtestsディレクトリをインクルードパスに追加するよ
	うに変更。

2010-05-02  ebin <yutaka@ebine.org>

	* sabel/response/Redirector.php: uri()にもパラメータを渡せるように変更。
	flagmentに対応。

2010-04-29  ebin <yutaka@ebine.org>

	* generator/skeleton/en/tasks/Install.php: アドオンインストーラ修正。
	Sabel_Xml_AttributesクラスにtoArray()メソッド追加。

2010-04-29  ebin <yutaka@ebine.org>

	* generator/skeleton/en/tasks/Install.php: アドオンインストーラ実装。

2010-04-28  ebin <yutaka@ebine.org>

	* sabel/db/mysql/Driver.php: mysql_set_charset関数がない環境でも
	mysql_set_charsetが実行されて落ちる問題の修正。

2010-04-28  ebin <yutaka@ebine.org>

	* sabel/xml/Element.php: insertNextSibling()のバグ修正。

2010-04-27  ebin <yutaka@ebine.org>

	* generator/skeleton/en/config/INIT.php : APP_ENCODING定数の追加。それにとも
	なう若干の改修。Sabel_Util_String::mbTrim()のバグ修正。

2010-04-26  ebin <yutaka@ebine.org>

	* Test/*: テストを全体的に修正。

2010-03-12  ebin <yutaka@ebine.org>

	* generator/skeleton/*: フォーム周りを若干更新。

2009-12-02  ebin <yutaka@ebine.org>

	* sabel/test/*: 他パッケージの更新に追い付いてない問題の修正。

2009-12-02  ebin <yutaka@ebine.org>

	* sabel/http/*: httpパッケージ更新。移植完了。

2009-12-01  ebin <yutaka@ebine.org>

	* sabel/http/*: Zend Frameworkから移植（CurlとかProxyとか未完了）。

2009-11-30  ebin <yutaka@ebine.org>

	* sabel/kvs/Xml.php: ファイルロック実装。

2009-11-27  ebin <yutaka@ebine.org>

	* sabel/session/*: sessionパッケージ改修。

2009-11-27  ebin <yutaka@ebine.org>

	* sabel/functions/core.php: get_server_name()関数追加。environment()関数の削
	除。それに関わる箇所の変更。lib/Cache.php作り直し。

2009-11-27  ebin <yutaka@ebine.org>

	* sabel/rss/*: rssパッケージ改修。

2009-11-24  ebin <yutaka@ebine.org>

	* sabel/xml/Element.php: Sabel.jsに合わせ、insertPreviousSibling,
	insertNextSiblingメソッド実装。insertBefore, insertAfterメソッド改修。

2009-11-24  ebin <yutaka@ebine.org>

	* sabel/controller/Page.php: __get()と__set()をpublicに修正。
	* sabel/cache: キャッシュクラス内部でKVSパッケージを使用するように変更。
